syntax = "proto3";

package Microservices.Demo.order_service.proto.order_grpc;
option csharp_namespace = "Microservices.Demo.OrderService.Proto.OrderGrpc";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service OrderGrpc {
  rpc V1QueryOrders (V1QueryOrdersRequest) returns (stream V1QueryOrdersResponse) {
    option (google.api.http) = {
      post: "/OrderGrpc/V1QueryOrders"
      body: "*"
    };
  };
  rpc V1CancelOrder (V1CancelOrderRequest) returns (V1CancelOrderResponse) {
    option (google.api.http) = {
      post: "/OrderGrpc/V1CancelOrder"
      body: "*"
    };
  }
  rpc V1DeliveryOrder (V1DeliveryOrderRequest) returns (V1DeliveryOrderResponse) {
    option (google.api.http) = {
      post: "/OrderGrpc/V1DeliveryOrder"
      body: "*"
    };
  }
}

message V1CreateOrderRequest {
  message Item {
    string barcode = 1;
    int32 quantity = 2;
  }
  int64 region_id = 1;
  int64 customer_id = 2;
  string comment = 3;
  repeated Item items = 4;
}

message V1CreateOrderResponse {
  
}

message V1QueryOrdersRequest {
  repeated int64 order_ids = 1;
  repeated int64 customer_ids = 2;
  repeated int64 region_ids = 3;
  int32 limit = 4;
  int32 offset = 5;

}

message V1QueryOrdersResponse {
  message Region {
    int64 id = 1;
    string name = 2;
  }

  int64 order_id = 1;
  Region region = 2;
  OrderStatus status = 3;
  int64 customer_id = 4;
  google.protobuf.StringValue comment = 5;
  google.protobuf.Timestamp created_at = 6;

  int64 total_count = 7;
}

message V1CancelOrderRequest {
  int64 order_id = 1;
}

message V1CancelOrderResponse {
  message Success {
  }

  message Error {
    string code = 1;
    string text = 2;
  }

  oneof CancelResult {
    Success ok = 1;
    Error error = 2;
  }
}

message V1DeliveryOrderRequest {
  int64 order_id = 1;
}

message V1DeliveryOrderResponse {
  message DeliverySuccess {
  }

  message DeliveryError {
    string code = 1;
    string text = 2;
  }

  oneof DeliveryResult {
    DeliverySuccess ok = 1;
    DeliveryError error = 2;
  }
}

enum OrderStatus{
  ORDER_STATUS_UNDEFINED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_CANCELED = 2;
  ORDER_STATUS_DELIVERED = 3;
}